add missing content

--- a/conclussions.tex
+++ b/conclussions.tex
@@ -1,13 +1,22 @@
 \section{Conclusiones}
-\label{sec:conclusiones}
+\label{section:jstat:concs}
 
- 
-
-
-
-
-
-%%% Local Variables: 
-%%% mode: latex
-%%% TeX-master: "main"
-%%% End: 
+Una vez descritos los problemas asociados a la explosión combinatoria de
+algunos operadores del álgebra, se busca generar información suficiente
+que permita determinar la probabilidad de que una característica cualquiera
+se encuentre presente en el conjunto de productos válidos del término
+a representar.
+%
+Para llevar a cabo esto, han sido descritos los nuevos operadores sintácticos
+de la extensión probabilística. Una vez definidos, han de representarse las 
+extensiones para las reglas de las semánticas descritas en secciones anteriores,
+como lo son la semántica operacional y la semántica denotacional.
+%
+Al haber mostrado por completo la definición formal de la extensión probabilística
+es imprescindible mostrar que la extensión es consistente con las definiciones de las
+secciones anteriores.
+%
+Una vez definida la extensión, son mostradas las ventajas de ocultar aquellos elementos
+sintácticos que no afectan la cardinalidad del conjunto de productos válidos del sistema.
+Esto permite analizar el término de manera mas eficiente reduciendo la complejidad del
+algoritmo a orden N, posiblemente siendo este término de una longitud considerable.
