--- a/testing.tex
+++ b/testing.tex
@@ -1,6 +1,7 @@
 % $Id$
 
 \section{Implementación}
+\label{sec:stat:impl}
 
 La siguiente sección presenta los resultados obtenidos
 de la implementación de la semántica denotacional
@@ -17,10 +18,10 @@ Los parámetros de configuración utilizados en BeTTy han
 sido los siguientes: 
 
 \begin{itemize}
-        \item La probabilidad de que exista una característica obligatoria es de un 20\%.
-        \item La probabilidad de que exista una característica opcional es de un 30\%.
-        \item La probabilidad de que una característica este dentro de una relación de \emph{selección única} un 25\%.
-        \item La probabilidad de que una característica este dentro de una relación de \emph{paralelo} un 25\%.
+	\item La probabilidad de que exista una característica obligatoria es de un 20\%.
+	\item La probabilidad de que exista una característica opcional es de un 30\%.
+	\item La probabilidad de que una característica este dentro de una relación de \emph{selección única} un 25\%.
+	\item La probabilidad de que una característica este dentro de una relación de \emph{paralelo} un 25\%.
 \end{itemize}
 
 
@@ -43,11 +44,11 @@ características probadas dentro del número total de
 características que conforman el producto.
 
 \begin{figure}[h]
-        \centering
-        \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
-        \linefigure
-        \caption{Tiempo de procesamiento para un modelo con 1500 características}\label{fig:plot:probs:times}
+	\centering
+	\linefigure
+	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
+	\linefigure
+	\caption{Tiempo de procesamiento para un modelo con 1500 características}\label{fig:plot:probs:times}
 \end{figure}
 
 La figura \ref{fig:plot:probs:times} muestra el tiempo
@@ -74,11 +75,11 @@ de 15 y 20 milisegundos, con algunas características procesándose
 en la banda superior entre 20 y 38 milisegundos.
 
 \begin{figure}[h]
-        \centering
-        \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs.eps}
-        \linefigure
-        \caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características}\label{fig:plot:probs:probs}
+	\centering
+	\linefigure
+	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs.eps}
+	\linefigure
+	\caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características}\label{fig:plot:probs:probs}
 \end{figure}
 
 La figura \ref{fig:plot:probs:probs} muestra gráficamente
@@ -90,11 +91,11 @@ claramente agrupaciones de características con mayor probabilidad.
 
 
 \begin{figure}[h]
-        \centering
-        \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs_sorted.eps}
-        \linefigure
-        \caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características ordenadas decrecientement}\label{fig:plot:probs:probs:sorted}
+	\centering
+	\linefigure
+	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs_sorted.eps}
+	\linefigure
+	\caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características ordenadas decrecientement}\label{fig:plot:probs:probs:sorted}
 \end{figure}
 
 La figura \ref{fig:plot:probs:probs:sorted} muestra
