--- a/syntax.tex
+++ b/syntax.tex
@@ -1,23 +1,23 @@
 % $Id$
 
 \section{Sintaxis}
+\label{sec:stat:sintax}
 
 Para el modelo probabilístico, el conjunto de características será representado como $\calF$,
 las características aisladas se mostrarán como $\feature{A}, \feature{B}, \feature{C}\dots$,
 los términos del modelo probabilístico serán descritos como $P,Q$ y
 las probabilidades $p,q$ son expresadas dentro del rango $(0,1)$.
-\todo{Hay que explicar los operadores probabilísticos $P \choice_{p}
-  Q$ y $\ofeature{A};_{p} P$ y la razón por la que el resto no
-  necesita probabilidades.}
+
 \bdfn
+\label{sec:stat:sintax:dfn}
 Una \emph{línea de productos probabilística} es un término generado por la siguiente
 expresion EBNF:
 $$
 \begin{array}{ll}
-  P::=& \checkmark \barra \nil \barra \feature{A};P \barra
-    \ofeature{A};_{p} P \barra P \choice_{p} Q \barra P \paral Q \barra
-  \\ 
-  & \exclude{A}{B}{P}\barra  \require{A}{B}{P}\barra  \forbid{A}{P}\barra  \mandatory{A}{P}\\ 
+P::=& \checkmark \barra \nil \barra \feature{A};P \barra
+\ofeature{A};_{p} P \barra P \choice_{p} Q \barra P \paral Q \barra
+\\ 
+& \exclude{A}{B}{P}\barra  \require{A}{B}{P}\barra  \forbid{A}{P}\barra  \mandatory{A}{P}\\ 
 \end{array}     
 $$
 \noindent 
@@ -25,6 +25,29 @@ donde $\feature{A} \in \calF$ y $p\in(0,1)$. Los términos del álgebra
 serán representados dentro del modelo $\fodaPAp$.
 \edfn
 
+Como puede observarse, la descripción de la sintaxis
+para la extensión probabilística (ver def. \ref{sec:stat:sintax:dfn})
+parte de la definición original de \fodaPA\ (ver def. \ref{dfn:syntax}).
+Sin embargo los elementos sintácticos deben ser modificados tal que
+permitan almacenar información relativa a las probabilidades.
+%
+Los operadores de la sintaxis que han sido extendidos para soportar
+probabilidades son $P \choice_{p} Q$ y $\ofeature{A};_{p} P$
+por dos razones.
+%
+La primera razón es que estos dos operadores son los operadores mínimos
+a los que un término \fodaPA\ puede reducirse (formas normales y pre-normales) y
+cualquier otro término podría ser representado utilizando estos dos operadores. 
+La segunda razón es porque estos operadores son los operadores que representan
+la selección exclusiva o de adición opcional de características dentro de
+los productos en construcción, afectando
+así a la cardinalidad de las características dentro de los productos finales.
+
+
+
+%\todo{Hay que explicar los operadores probabilísticos $P \choice_{p}
+%	Q$ y $\ofeature{A};_{p} P$ y la razón por la que el resto no
+%	necesita probabilidades.}
 
 %%% Local Variables: 
 %%% mode: latex
